# nba-crossword

./: .gitignore  CLAUDE.md  OPERATIONS.md  README.md
.github/workflows/: daily-puzzle.yml  deploy-pages.yml
compound-engineering/: PROJECT-STATUS.md
compound-engineering/analyses/: 2026-06-02-clue-rating-batch-round2.md  (+1 more)
pipeline/: README.md  pyproject.toml
pipeline/data/: wordlist.txt
pipeline/data/bee/: names_nba.txt  names_wnba.txt
pipeline/nba_mini/: clues.py  critic.py  generate.py  grid.py  schema.py  season_context.py  season_context_nba.md  season_context_wnba.md  wordlist.py
pipeline/nba_mini/bee/: __init__.py  corpus.py  generate.py  generate_cli.py  refresh.py  refresh_cli.py  roster.py  schema.py
pipeline/nba_mini/ingest/: __init__.py  nba_stats.py  reddit.py
pipeline/nba_mini/prompts/: candidate_answers.md  clue_discoursey.md  clue_factual.md  clue_wry.md  critic.md
pipeline/tests/: test_bee_corpus.py  test_bee_generate.py  test_bee_generate_cli.py  test_bee_refresh.py  test_bee_roster.py  test_bee_schema.py  test_clues.py  test_critic.py  test_generate_e2e.py  test_grid.py  test_ingest_nba_stats.py  test_ingest_reddit.py  test_schema.py  test_season_context.py
pipeline/tests/fixtures/: nba_stats_scoreboard.json  reddit_comments_post_a.json  reddit_comments_post_b.json  reddit_comments_post_d.json  reddit_top.rss  reddit_top_posts.json
puzzles/: example.json
scripts/: README.md  com.nba-crossword.daily-puzzle.plist  daily-puzzle-local.sh
web/: README.md  next.config.mjs  package-lock.json  package.json  vercel.json  vitest.config.ts
(+114 files in other folders)
