[project]
name = "nba-mini"
version = "0.1.0"
description = "Daily NBA mini crossword generation pipeline"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "requests>=2.31",
    "nba_api>=1.4",
    "anthropic>=0.34",
    "snowflake-connector-python>=3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nba_mini"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
